@@ -51,8 +51,9 @@ public:
     TEST_CASE(net_write_timeout39878);
     TEST_CASE(store_result_error_51562);
     TEST_CASE(getResultSet_54840);
-	TEST_CASE(supportIssue_52319);
-	TEST_CASE(expired_pwd);
+    TEST_CASE(supportIssue_52319);
+    TEST_CASE(expired_pwd);
+    TEST_CASE(legacy_auth);
   }
 
   /**
@@ -77,6 +78,8 @@ public:
   void supportIssue_52319();
 
   void expired_pwd();
+
+  void legacy_auth();
 
 };
 
