@@ -22,9 +22,10 @@
   51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
 */
 
-GA  1.1.4 - 2013-05-22
+GA  1.1.4 - 2013-07-02
 - Both static and dynamic driver libraries are now linked statically against
   libmysql library
+- Cannot Connect error when using legacy authentication. (Bug#16970753/69492)
 - Built against libmysql 5.6.11
 
 GA  1.1.3 - 2013-03-22
